--- a/tsmodules/package.json
+++ b/tsmodules/package.json
@@ -81,6 +81,9 @@
     "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "eslint": "^8.54.0",
     "rollup": "^4.5.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.2"
