--- a/tsmodules/package.json
+++ b/tsmodules/package.json
@@ -3,6 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup --bundleConfigAsCjs --config rollup.config.js",
+    "watch": "rollup --bundleConfigAsCjs --config rollup.config.js --watch",
+    "type-check": "tsc --noEmit"
+  },
   "dependencies": {
     "ansi-styles": "^3.2.1",
     "babel-plugin-polyfill-corejs2": "^0.4.6",
@@ -87,11 +93,6 @@
     "rollup": "^4.5.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.2"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup --bundleConfigAsCjs --config rollup.config.js",
-    "type-check": "tsc --noEmit"
   },
   "keywords": [],
   "author": "Andrew C Bates <a@sprock.io>",
