Add test framework

--- a/tsmodules/tsconfig.json
+++ b/tsmodules/tsconfig.json
@@ -7,7 +7,13 @@
     "removeComments": true,
     "target": "es5",
     "module": "ESNext",
-    "strict": false
+    "strict": false,
+    "plugins": [
+      {
+        "transform": "ts-auto-mock/transformer",
+        "cacheBetweenTests": false
+      }
+    ]
   },
   "files": [
     "./node_modules/nakama-runtime/index.d.ts"
