--- a/tsmodules/package.json
+++ b/tsmodules/package.json
@@ -4,10 +4,26 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup --bundleConfigAsCjs --config rollup.config.js",
     "watch": "rollup --bundleConfigAsCjs --config rollup.config.js --watch",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:unit": "jest --testPathPattern=tests/unit",
+    "test:system": "jest --testPathPattern=tests/system",
+    "test:characterization": "jest --testPathPattern=tests/characterization"
+  },
+  "jest": {
+    "globals": {
+      "ts-jest": {
+        "compiler": "ts-patch/compiler"
+      }
+    },
+    "transform": {
+      ".(ts|tsx)": "ts-jest"
+    },
+    "setupFiles": [
+      "<rootDir>jest-config.ts"
+      ]
   },
   "dependencies": {
     "ansi-styles": "^3.2.1",
@@ -82,15 +98,24 @@
     "@babel/core": "^7.23.3",
     "@babel/plugin-external-helpers": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
+    "@jest/globals": "^29.7.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
+    "@types/jest": "^29.5.10",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
+    "jest": "^29.7.0",
+    "jest-ts-auto-mock": "^2.1.0",
     "rollup": "^4.5.0",
+    "supertest": "^6.3.3",
+    "ts-auto-mock": "^3.7.1",
+    "ts-jest": "^29.1.1",
+    "ts-patch": "^3.0.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.2"
   },
