Update EchoRelay execution

--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -38,17 +38,7 @@ services:
 
   echorelay:
     build: EchoRelay
-    entrypoint:
-      - "/bin/sh"
-      - "-ecx"
-      - >
-        ls -l &&
-        dotnet EchoRelay.Nakama.dll
-        --verbose
-        --port 7777
-        --nakama-uri "http://nakama:7350/?serverKey=1231232e-7222-40e0-b71e-454f5ef6ab42&relayId=spr-echorelay-1"
-    command:
-      - >
+    command: "-v -p 7777 --nakama-uri "http://nakama:7350/?serverkey=1231232e-7222-40e0-b71e-454f5ef6ab42&relayid=echorelay-1"
     expose:
       - "7777"
     ports:
