--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -2,6 +2,7 @@ version: '3'
 services:
   nakama:
     build: .
+    restart: "unless-stopped"
     entrypoint:
       - "/bin/sh"
       - "-ecx"
@@ -12,7 +13,6 @@ services:
           --session.token_expiry_sec 7200
           --metrics.prometheus_port 9100
           --config /nakama/data/local.yml
-    restart: "no"
     links:
       - "cockroachdb:db"
     depends_on:
@@ -38,6 +38,7 @@ services:
 
   echorelay:
     build: EchoRelay
+    restart: "unless-stopped"
     command: "-v -p 7777 --nakama-uri "http://nakama:7350/?serverkey=1231232e-7222-40e0-b71e-454f5ef6ab42&relayid=echorelay-1"
     expose:
       - "7777"
@@ -51,8 +52,8 @@ services:
 
   cockroachdb:
     image: cockroachdb/cockroach:latest-v23.1
+    restart: "unless-stopped"
     command: start-single-node --insecure --store=attrs=ssd,path=/var/lib/cockroach/
-    restart: "no"
     volumes:
       - data:/var/lib/cockroach
     expose:
@@ -68,6 +69,7 @@ services:
       retries: 5
   prometheus:
     image: prom/prometheus
+    restart: "unless-stopped"
     entrypoint: /bin/sh -c
     command: |
       'sh -s <<EOF
@@ -91,15 +93,16 @@ services:
     ports:
       - '9090:9090'
   nginx:
-    profiles:
-      - prod
     image: jonasal/nginx-certbot:latest
+    restart: "unless-stopped"
     environment:
       # This will depend on your authenticator method.
       # see https://github.com/JonasAlfredsson/docker-nginx-certbot
       CERTBOT_EMAIL: "a@sprock.io"
       CERTBOT_AUTHENTICATOR: "dns-cloudflare"
     ports:
+      - "80:80"
+      - "443:443"
       - "7349:7349"
       - "7350:7350"
       - "7351:7351"
@@ -111,6 +114,5 @@ services:
     depends_on:
       nakama:
         condition: service_started
-
 volumes:
   data:
