Fix setAccount rpc test

--- a/tsmodules/tsconfig.json
+++ b/tsmodules/tsconfig.json
@@ -3,8 +3,9 @@
     "noImplicitReturns": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "removeComments": true,
+    "noUnusedParameters": false,
     "target": "es5",
     "module": "ESNext",
     "strict": false,
