--- a/nginx_conf.d/nakama.conf.example
+++ b/nginx_conf.d/nakama.conf.example
@@ -1,65 +1,6 @@
-map $http_upgrade $connection_upgrade {
-    default upgrade;
-    '' close;
-}
-upstream backends {
-    server backends.echovrce.com service=_echorelay._tcp resolve;
-}
-
-# only set the api key if it's not already set
-map $http_x_api_key $xapikey {
-    default   $http_x_api_key;
-    ""        "fd3ce72252326be0434d8895a84dddb1efb0d969";
-}
-
 # Configure global proxy settings
-proxy_http_version 1.1;
-proxy_set_header Upgrade $http_upgrade;
-proxy_set_header Connection $connection_upgrade;
-proxy_set_header Host $host;
-proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-proxy_set_header X-Forwarded-Proto $scheme;
-proxy_set_header X-Api-Key $xapikey;
-
-server {
-    listen 80;
-    location / {
-        proxy_pass http://backends/api;
-    }
-
-    location /serverdb {
-        proxy_pass http://backends/serverdb;
-    }
-}
-
-server {
-    listen 31112;
-    location / {
-        proxy_pass http://relay/config;
-    }
-}
-
-server {
-    listen 34712;
-    location / {
-        proxy_pass http://relay/login;
-    }
-}
-
-server {
-    listen 42148;
-    location / {
-        proxy_pass http://relay/matching;
-    }
-}
-
-server {
-    listen 42850;
-    location / {
-        proxy_pass http://relay/transaction;
-    }
-}
+proxy_set_header X-Real-IP $remote_address;
 
 # Nakama gRPC API.
 server {
@@ -67,7 +8,7 @@ server {
   listen [::]:7349 ssl;
 
   # Domain names this server should respond to.
-  server_name nakama0.eu-west.echovrce.com;
+  server_name nakama.example.com;
 
   # SSL certificate configuration.
   ssl_certificate         /etc/letsencrypt/live/nakama/fullchain.pem;
@@ -87,7 +28,7 @@ server {
   listen [::]:7351 ssl;
 
   # Domain names this server should respond to.
-  server_name nakama0.eu-west.echovrce.com;
+  server_name nakama.example.com;
 
   # SSL certificate configuration.
   ssl_certificate         /etc/letsencrypt/live/nakama/fullchain.pem;
@@ -108,7 +49,7 @@ server {
   listen [::]:7350 ssl;
 
   # Domain names this server should respond to.
-  server_name nakama0.eu-west.echovrce.com;
+  server_name nakama.example.com;
 
   # SSL certificate configuration.
   ssl_certificate         /etc/letsencrypt/live/nakama/fullchain.pem;
@@ -180,7 +121,7 @@ server {
   listen [::]:6789 ssl;
 
   # Domain names this server should respond to.
-  server_name nakama0.eu-west.echovrce.com;
+  server_name nakama.example.com;
 
   # SSL certificate configuration.
   ssl_certificate         /etc/letsencrypt/live/nakama/fullchain.pem;
@@ -195,4 +136,4 @@ server {
 
 
 
-# vim: ft=nginx ss=4 ts=4 sw=4 et
+# vim: ft=nginx
