Implement code based device linking

--- a/tsmodules/package.json
+++ b/tsmodules/package.json
@@ -64,6 +64,7 @@
     "js-tokens": "^4.0.0",
     "jsesc": "^2.5.2",
     "json5": "^2.2.3",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lru-cache": "^5.1.1",
     "magic-string": "^0.30.5",
@@ -105,6 +106,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/jest": "^29.5.10",
+    "@types/lodash": "^4.14.202",
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
