--- a/tsmodules/tsconfig.json
+++ b/tsmodules/tsconfig.json
@@ -17,7 +17,8 @@
     ]
   },
   "files": [
-    "./node_modules/nakama-runtime/index.d.ts"
+    "./node_modules/nakama-runtime/index.d.ts",
+    
   ],
   "include": [
     "src/**/*"
