--- a/example.docker-compose.yml
+++ b/example.docker-compose.yml
@@ -63,6 +63,7 @@ services:
       - "6789"
     # remove if using nginx as reverse proxy
     ports:
+      - "7777:6789"
       - "6789:6789"
     links:
       - nakama
@@ -153,11 +154,12 @@ services:
     restart: "unless-stopped"
     environment:
       - "NODE_ENV=production"
+      - "LINK_PAGE_URL=http://localhost:3000/link"
       - "SESSION_SECRET=nakama_dev_session_secret"
-      - "DISCORD_OAUTH2_URL=https://discord.com/api/oauth2/authorize?client_id=1180461747488956496&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fsuccess&scope=identify""
+      - "DISCORD_AUTHORIZE_URL=https://discord.com/api/oauth2/authorize?client_id=1180461747488956496&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fsignin-discord&scope=identify"
       - "NAKAMA_API_BASE_URL=http://nakama:7350"
       - "NAKAMA_HTTP_KEY=devonly_nakama_server_key"
-      - "DISCORD_OAUTH_REDIRECT_URL=http://localhost:3000/oauth/success"
+      - "DISCORD_REDIRECT_URI=http://localhost:3000/signin-discord"
       - "SUCCESS_REDIRECT_URL=https://discord.gg/echo-combat-lounge-779349159852769310"
     expose:
       - "8080"
