--- a/tsmodules/package.json
+++ b/tsmodules/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "@types/jwt-decode": "^3.1.0",
     "ansi-styles": "^3.2.1",
     "babel-plugin-polyfill-corejs2": "^0.4.6",
     "babel-plugin-polyfill-corejs3": "^0.8.6",
@@ -61,9 +62,12 @@
     "is-core-module": "^2.13.1",
     "is-module": "^1.0.0",
     "is-reference": "^1.2.1",
+    "jose": "^5.1.3",
     "js-tokens": "^4.0.0",
     "jsesc": "^2.5.2",
     "json5": "^2.2.3",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lru-cache": "^5.1.1",
@@ -83,7 +87,6 @@
     "regexpu-core": "^5.3.2",
     "regjsparser": "^0.9.1",
     "resolve": "^1.22.8",
-    "semver": "^6.3.1",
     "supports-color": "^5.5.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
     "to-fast-properties": "^2.0.0",
@@ -106,6 +109,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/jest": "^29.5.10",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
